--- a/src/main/resources/frame.html
+++ b/src/main/resources/frame.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script type="text/javascript" src="stream.js" defer></script>
+    <script type="text/javascript" src="stream" defer></script>
     <style>
 		.load {
     		position: absolute;
@@ -27,6 +27,7 @@
     		0% { transform: rotate(0deg); }
     		100% { transform: rotate(360deg); }
 		}
+
 
     </style>
 </head>
