--- a/src/main/resources/frame.html
+++ b/src/main/resources/frame.html
@@ -7,9 +7,11 @@
     <link rel="icon" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
     <link rel="icon" sizes="16x16" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
     <link rel="icon" sizes="32x32" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
+    <link rel="icon" sizes="64x64" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="shortcut icon" sizes="16x16" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" sizes="16x16" type="image/x-icon" href="/favicon16.ico"/>
+    <link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/favicon32.ico"/>
+    <link rel="shortcut icon" sizes="64x64" type="image/x-icon" href="/favicon64.ico"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"  crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
