--- a/src/main/resources/frame.html
+++ b/src/main/resources/frame.html
@@ -4,14 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>%NAME%</title>
-    <link rel="icon" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
-    <link rel="icon" sizes="16x16" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
-    <link rel="icon" sizes="32x32" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
-    <link rel="icon" sizes="64x64" type="image/webp" href="data:image/webp;base64, %FAVICON%"/>
+    <link rel="icon" href="/favicon.png">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="shortcut icon" sizes="16x16" type="image/x-icon" href="/favicon16.ico"/>
-    <link rel="shortcut icon" sizes="32x32" type="image/x-icon" href="/favicon32.ico"/>
-    <link rel="shortcut icon" sizes="64x64" type="image/x-icon" href="/favicon64.ico"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon.pnc?57">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon.pnc?60">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon.pnc?72">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon.pnc?76">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon.pnc?114">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon.pnc?120">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon.pnc?144">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon.pnc?152">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.pnc?180">
+    <link rel="icon" type="image/png" href="/favicon.png?32" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon.png?192" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon.png?96" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon.png?16" sizes="16x16">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"  crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
