--- a/src/main/resources/frame.html
+++ b/src/main/resources/frame.html
@@ -8,15 +8,15 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="57x57" href="/favicon.pnc?57">
-    <link rel="apple-touch-icon" sizes="60x60" href="/favicon.pnc?60">
-    <link rel="apple-touch-icon" sizes="72x72" href="/favicon.pnc?72">
-    <link rel="apple-touch-icon" sizes="76x76" href="/favicon.pnc?76">
-    <link rel="apple-touch-icon" sizes="114x114" href="/favicon.pnc?114">
-    <link rel="apple-touch-icon" sizes="120x120" href="/favicon.pnc?120">
-    <link rel="apple-touch-icon" sizes="144x144" href="/favicon.pnc?144">
-    <link rel="apple-touch-icon" sizes="152x152" href="/favicon.pnc?152">
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.pnc?180">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon.png?57">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon.png?60">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon.png?72">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon.png?76">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon.png?114">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon.png?120">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon.png?144">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon.png?152">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png?180">
     <link rel="icon" type="image/png" href="/favicon.png?32" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon.png?192" sizes="192x192">
     <link rel="icon" type="image/png" href="/favicon.png?96" sizes="96x96">
