--- a/src/main/resources/frame.html
+++ b/src/main/resources/frame.html
@@ -25,32 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"  crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="stream" type="text/javascript" defer></script>
-    <style>
-		.load {
-    		position: absolute;
-    		top: 50%;
-    		left: 50%;
-    		margin-left: -20px;
-    		margin-top: -20px;
-    		border: 4px solid #f3f3f3;
-    		border-top: 4px solid #4d4d4d;
-    		border-radius: 50%;
-    		width: 40px;
-    		height: 40px;
-    		animation: spin 3s linear infinite;
-		}
-		@keyframes spin {
-    		0% { transform: rotate(0deg); }
-    		100% { transform: rotate(360deg); }
-		}
-		.material-symbols-outlined {
-            font-variation-settings:
-                'FILL' 0,
-                'wght' 200,
-                'GRAD' 0,
-                'opsz' 48
-        }
-    </style>
+    <link href="style" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="load"></div>
